third_party/move/move-compiler-v2/tests/checking-lang-v2.3/key_err.exp

Diagnostics:
error: structs/enums with key ability cannot have public, package or friend visibility but `m::Wrapper` has key ability
  ┌─ tests/checking-lang-v2.3/key_err.move:2:5
  │
2 │ ╭     public enum Wrapper has key {
3 │ │         V1(u64, u64),
4 │ │         V2(u64),
5 │ │     }
  │ ╰─────^

error: structs/enums with key ability cannot have public, package or friend visibility but `m::Wrapper2` has key ability
   ┌─ tests/checking-lang-v2.3/key_err.move:7:5
   │
 7 │ ╭     package enum Wrapper2 has key {
 8 │ │         V1(u64, u64),
 9 │ │         V2(u64),
10 │ │     }
   │ ╰─────^

error: structs/enums with key ability cannot have public, package or friend visibility but `m_friend::Wrapper` has key ability
   ┌─ tests/checking-lang-v2.3/key_err.move:16:5
   │
16 │     friend struct Wrapper(u64, u64) has key;
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
